--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
 .navbar{
     position: fixed;
     top: 10px;
-    left: 20px;
+    left: 10px;
     right: 10px;
     display: flex;
     justify-content: space-between;
@@ -57,7 +57,7 @@
     .navbar{
         flex-direction: column;
         align-items: flex-start;
-        padding: 20px 10px;
+        padding: 10px 10px;
     }
     .navLinks{
         display: flex;
@@ -95,4 +95,15 @@
         display: flex;
         z-index: 1;
     }   
+}
+@media screen and (max-width: 530px){
+    .navbar{
+        padding: 5px;
+    }
+    .logo{
+        font-size: 1.5rem;
+    }
+    .LinksBtn{
+        font-size: 1.5rem;
+    }
 }
