padding for sections and SEO

--- a/src/components/Projects/Project.module.css
+++ b/src/components/Projects/Project.module.css
@@ -6,6 +6,7 @@
     margin-left: 10%;
     margin-right: 10%;
     padding: 20px;
+    padding-top: 100px;
     min-height: 90vh;
     z-index: 1;
 }
