--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -164,6 +164,7 @@
         margin-top: 0;
         margin-left: 0;
         margin-right: 0;
+        padding-top: 30px;
         min-height: 90vh;
     }
     .content{
