--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -40,7 +40,7 @@
 
 .description{
     font-size: 30px;
-    margin-bottom: 52px;
+    margin-bottom: 20px;
     text-align: justify;
     width: 100%;
     color: var(--secondary-text);
@@ -90,6 +90,22 @@
     color: var(--button-text);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
+}
+
+.icons{
+    width: 100%;
+    padding: 0px 60px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+.icons a{
+    text-decoration: none;
+    margin: 5px;
+    color: white;
 }
 
 
@@ -150,8 +166,21 @@
 }
 
 @media screen and (max-width: 1000px) {
+    .container{
+        padding-top:80px;
+    }
     .heroImg{
-        width: 40%
+        width: 40%;
+        
+    }
+}
+
+@media screen and (max-width: 880px){
+    .viewBtn{
+        font-size: medium;
+    }
+    .contactBtn{
+        font-size: medium;
     }
 }
 
